--- a/app/src/main/res/layout/productdetails.xml
+++ b/app/src/main/res/layout/productdetails.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ffffff"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:flow_firstHorizontalStyle="spread">
 
     <LinearLayout
 
         android:id="@+id/LinearLayoutHeader"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -19,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dip"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:scaleType="center"
             android:src="@drawable/shoe">
 
         </ImageView>
@@ -41,8 +43,8 @@
     <TextView
         android:id="@+id/TextViewProductDetails"
 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="140dp"
         android:layout_margin="5dip"
         android:layout_weight="1"
         android:text="Product description"
@@ -53,19 +55,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayoutCurrentlyInCart"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/textViewCurrentlyInCart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dip"
-            android:text="Currently in Cart:"
-            android:textColor="#000000"
-            android:textSize="20dip">
-
-        </TextView>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     </LinearLayout>
 
@@ -78,17 +70,6 @@
         android:layout_margin="5dip"
         android:orientation="horizontal">
 
-
-        <TextView
-            android:id="@+id/textView1"
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quantity:"
-            android:textColor="#000000">
-
-
-        </TextView>
 
         <EditText
 
@@ -114,6 +95,28 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textViewCurrentlyInCart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dip"
+        android:text="Currently in Cart:"
+        android:textColor="#000000"
+        android:textSize="20dip">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/textView1"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quantity:"
+        android:textColor="#000000">
+
+
+    </TextView>
 
 </LinearLayout>
 
