--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="colorPrimaryDark">#2f383a</color>
     <color name="gray_lite">#649f9f9f</color>
     <color name="secondary">#B3DCE8</color>
+
+    <color name="colorPrimary">#9fa8da</color>
+    <color name="colorAccent">#131b1f</color>
+    <color name="textBlack">#000000</color>
+    <color name="textWhite">#FFFFFF</color>
 </resources>
