--- a/app/src/main/res/layout/productdetails.xml
+++ b/app/src/main/res/layout/productdetails.xml
@@ -65,7 +65,7 @@
     <LinearLayout
         android:id="@+id/linearLayoutAddLayout"
 
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dip"
         android:orientation="horizontal">
