--- a/app/src/main/res/layout/productdetails.xml
+++ b/app/src/main/res/layout/productdetails.xml
@@ -5,6 +5,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ffffff"
+    android:gravity="center"
+    android:layoutAnimation="@android:anim/slide_in_left"
     android:orientation="vertical"
     app:flow_firstHorizontalStyle="spread">
 
