--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,119 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/secondary"
-    android:padding="5dp">
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="7.5dp"
-        app:cardElevation="7.5dp"
-        app:cardMaxElevation="10dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:id="@+id/LinearLayoutItem">
+    <LinearLayout
+        android:id="@+id/linearLayoutDetails"
+        android:orientation="horizontal"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent">
+        <ImageView android:layout_margin="5dip"
+            android:id="@+id/ImageViewItem"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:layout_width="100dip">
 
-            <LinearLayout
-                android:id="@+id/linearLayoutDetails"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="horizontal"
-                android:padding="5dp">
+        </ImageView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_gravity="center"
-                    app:cardCornerRadius="5dp">
+        <TextView
+            android:id="@+id/TextViewItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dip"
+            android:maxWidth="150dip"
+            android:minLines="2"
+            android:text="Product Title"
+            android:textColor="#000000"
+            android:textSize="26dip">
 
-                    <ImageView
-                        android:id="@+id/ImageViewItem"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="5dip">
+        </TextView>
+        <TextView android:id="@+id/TextView01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
-                    </ImageView>
-                </androidx.cardview.widget.CardView>
+        </TextView>
 
-                <TextView
-                    android:id="@+id/TextViewItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dip"
-                    android:maxWidth="150dip"
-                    android:minLines="2"
-                    android:text="Product Title"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:textSize="26dip">
+    </LinearLayout>
 
-                </TextView>
+    <LinearLayout
+        android:id="@+id/linearLayoutQuantity"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_margin="5dip"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right">
 
-            </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quantity:"
+            android:textSize="18dip"
+            android:textColor="#000000"
+            android:id="@+id/textViewQuantity">
 
-            <LinearLayout
-                android:id="@+id/linearLayoutPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:layout_marginStart="5dip"
-                android:layout_marginTop="5dip"
-                android:layout_marginEnd="5dip"
-                android:layout_marginBottom="5dip"
-                android:orientation="horizontal">
+        </TextView>
 
-                <TextView
-                    android:id="@+id/textViewPrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Price"
-                    android:textColor="#000000"
-                    android:textSize="18dip">
+    </LinearLayout>
 
-                </TextView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayoutQuantity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginStart="5dip"
-                android:layout_marginTop="5dip"
-                android:layout_marginEnd="5dip"
-                android:layout_marginBottom="5dip"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textViewQuantity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Quantity:"
-                    android:textColor="#000000"
-                    android:textSize="18dip">
-
-                </TextView>
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-</RelativeLayout>
-
-
-
-
-
+</LinearLayout>
 
 <!--<androidx.linearlayout.widget.LinearLayout-->
 <!--    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"-->
