--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -15,11 +15,17 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/logo_mama_wa_estate"
         app:contentInsetStart="0dp"
         app:elevation="3dp"
         app:layout_scrollFlags="scroll|enterAlways"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/logo_mama_wa_estate" />
 
 
         <ImageView
@@ -35,6 +41,7 @@
             app:srcCompat="@drawable/ic_baseline_shopping_cart_32" />
 
     </androidx.appcompat.widget.Toolbar>
+
 
 
 
