--- a/app/src/main/res/layout/vendorregistor.xml
+++ b/app/src/main/res/layout/vendorregistor.xml
@@ -1,177 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/textWhite">
+    tools:context=".MainActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/registerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign Up"
+            android:textSize="40sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:textColor="@color/colorPrimary"/>
+
+        <EditText
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:fontFamily="@font/alice"
-            android:padding="20dp"
-            android:text="@string/registration"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="50dp"
+            android:hint="Username"
             />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/registerText"
-            android:layout_marginTop="1dp"
-            android:orientation="vertical"
-            android:padding="15dp">
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:hint="Enter your email"
+            android:inputType="textEmailAddress"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                android:fontFamily="@font/alice"
-                android:text="@string/select_what_you_own"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:hint="Enter password"
+            android:inputType="textPassword"/>
 
-            <RadioGroup
-                android:id="@+id/radioGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true">
 
-                <RadioButton
-                    android:id="@+id/radio_one"
-                    android:layout_width="101dp"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:onClick="checkButton"
-                    android:text="Grocery" />
+        <EditText
+            android:id="@+id/first"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Enter firstname" />
 
-                <RadioButton
-                    android:id="@+id/radio_two"
-                    android:layout_width="101dp"
-                    android:layout_height="wrap_content"
-                    android:onClick="checkButton"
-                    android:text="boutique" />
+        <EditText
+            android:id="@+id/last"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Enter lastname" />
 
-                <RadioButton
-                    android:id="@+id/radio_three"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="checkButton"
-                    android:text="Electricity_store" />
-            </RadioGroup>
+        <Button
+            android:id="@+id/signupBtn"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@color/colorAccent"
+            android:layout_marginTop="30dp"
+            android:text="Sign Up"
+            android:textColor="@android:color/white"/>
 
-            <LinearLayout
-                android:layout_width="393dp"
-                android:layout_height="60dp"
-                android:weightSum="2">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/box1"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="@string/select_shop"
-                    app:boxStrokeColor="@color/colorAccent">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/your_shop"
-                        android:layout_width="match_parent"
-                        android:layout_height="53dp"
-                        android:inputType="textMultiLine"
-                        android:textColor="@color/textBlack"
-                        android:textSize="18sp" />
 
-                </com.google.android.material.textfield.TextInputLayout>
 
-                <ImageView
-                    android:id="@+id/locationButton"
-                    android:layout_width="108dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button"
-                    android:contentDescription="@string/locationpin"
-                    android:padding="8dp"
-                    android:src="@drawable/location_pin"
-                    app:tint="@color/colorAccent" />
-
-            </LinearLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/box2"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="@string/your_phone"
-                app:boxStrokeColor="@color/colorAccent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/phNum"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:textColor="@color/textBlack"
-                    android:textSize="18sp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/reg_once"
-                android:textAlignment="center"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/text_view_selected"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/radioGroup"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="27dp"
-                android:text="Your selection: "
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/button_apply"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/text_view_selected"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="37dp"
-                android:text="apply"
-                android:textColor="@color/black" />
-
-            <Button
-                android:id="@+id/registerButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/button"
-                android:padding="10dp"
-                android:text="@string/register"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
